@@ -1,8 +1,13 @@
 2013-06-05  Ramon Casero  <rcasero@gmail.com>
 
+	* matlab/CgalToolbox/CMakeLists.txt: (0.2.1)
+
+	- Update path to CGAL, as we are now using a new version (4.2)
+	with a different directory name.
+
 	* matlab/ItkToolbox/CMakeLists.txt: (0.5.8)
 
-	- add dependency to compiler_config.h, a header file generated by
+	- Add dependency to compiler_config.h, a header file generated by
 	CGAL and only available once CGAL has installed.
 
 	* cpp/src/CMakeLists.txt: (0.2.5)
